Update charon extension: - Add simple styles - Add basic input validations - Add proper debounce to textarea input

--- a/charon/index.html
+++ b/charon/index.html
@@ -14,7 +14,9 @@
       cols="50"
       placeholder="Enter shortcuts here"
     ></textarea>
-    <input id="url" type="url" placeholder="Enter url to shortcuts file..." />
-    <button id="sync">Sync</button>
+    <div class="url-form">
+      <input id="url" type="url" placeholder="Enter url to shortcuts file..." />
+      <button id="sync">Sync</button>
+    </div>
   </body>
 </html>
